--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <h1>proyecto nuevo </h1>
 
-<i class=""></i>
+<i class="fa fa-2x fa-star"> nadaaa</i>
 
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action list-group-item-primary active">Active item</a>
   <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Item</a>
   <a href="#" class="list-group-item list-group-item-action list-group-item-primary disabled">Disabled item</a>
 </div>
+
+<i class="fas fa-font-awesome-logo-full    "></i>
