--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>proyecto nuevo </h1>
 
-<i class="fa fa-2x fa-star"> nadaaa</i>
+<i class="fa fa-2x fa-star"></i>
 
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action list-group-item-primary active">Active item</a>
