--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<h1>proyecto nuevo </h1>
+<div class="div">
+  <h1>Demos <small>angular</small></h1>
+  <hr>
 
-<i class="fa fa-2x fa-star"></i>
+<app-ng-style></app-ng-style>
 
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action list-group-item-primary active">Active item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Item</a>
-  <a href="#" class="list-group-item list-group-item-action list-group-item-primary disabled">Disabled item</a>
+<app-css></app-css>
+<p>Hola mundo desde app.component </p>
 </div>
-
-<i class="fas fa-font-awesome-logo-full    "></i>
