--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
-<div class="div">
+<div class="div m-5">
   <h1>Demos <small>angular</small></h1>
   <hr>
 
-<app-ng-style></app-ng-style>
+  <app-ng-style></app-ng-style>
 
-<app-css></app-css>
-<p>Hola mundo desde app.component </p>
+  <app-css></app-css>
+  <p>Hola mundo desde app.component </p>
+
+  <app-clases></app-clases>
+  <br><br>
+  <p appResaltado>Hola mundo</p>
 </div>
