--- a/src/app/components/clases/clases.component.html
+++ b/src/app/components/clases/clases.component.html
@@ -1,3 +1,22 @@
-<p>
-  clases works!
-</p>
+<div [ngClass]="alerta" class="alert" role="alert">
+  <strong>Well done!</strong>You succesfully read this important alert
+</div>
+<button type="button" class="btn btn-info mr-1" (click)="alerta = 'alert-info'">Alert info</button>
+<button type="button" class="btn btn-success" (click)="alerta = 'alert-success'">Succes</button>
+<br>
+<br>
+<h3 [ngClass]="{'text-danger': propiedades.danger, 'text-info': !propiedades.danger }">
+  Hola mundo
+</h3>
+
+<button (click)="propiedades.danger = !propiedades.danger" type="button" name="button" class="btn"
+  [ngClass]="{'btn-danger': propiedades.danger, 'btn-info': !propiedades.danger}">
+  Cambiar
+</button>
+
+<br><br>
+<button (click)="ejecutar()" class="btn btn-primary" type="button" name="button" [disabled]="loading">
+  <i [ngClass]="{'fa-save': !loading, 'fa-refresh fa-spin': loading}" class="fa "></i>
+  <span *ngIf="!loading">Guardar cambios</span>
+  <span *ngIf="loading">Espere por favor</span>
+</button>
