--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,7 @@
 
   <app-clases></app-clases>
   <br><br>
-  <p appResaltado>Hola mundo</p>
+  <p [appResaltado]="orange">Hola mundo</p>
+
+  <app-ng-switch></app-ng-switch>
 </div>
