--- a/src/app/components/ng-switch/ng-switch.component.html
+++ b/src/app/components/ng-switch/ng-switch.component.html
@@ -1,3 +1,26 @@
-<p>
-  NgSwitch corre a la perfeccion
-</p>
+<div [ngSwitch]="alerta">
+  <div *ngSwitchCase="'success'">Success</div>
+  <div *ngSwitchCase="'info'">info</div>
+  <div *ngSwitchCase="'warning'">warning</div>
+  <div *ngSwitchDefault>Danger</div>
+</div>
+
+<button type="button" (click)="alerta='success'" class="btn btn-info">
+  Cambiar
+</button>
+<br><br>
+
+<div [ngSwitch]="alerta">
+  <div *ngSwitchCase="'info'" class="alert alert-info" role="alert">
+    This is a primary alert—check it out!
+  </div>
+  <div *ngSwitchCase="'warning'" class="alert alert-warning" role="alert">
+    This is a secondary alert—check it out!
+  </div>
+  <div *ngSwitchCase="'success'" class="alert alert-success" role="alert">
+    This is a success alert—check it out!
+  </div>
+  <div *ngSwitchDefault class="alert alert-danger" role="alert">
+    This is a danger alert—check it out!
+  </div>
+</div>
