--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,6 @@
   <h1>Demos <small>angular</small></h1>
   <hr>
 
-  <app-ng-style></app-ng-style>
+  <router-outlet></router-outlet>
 
-  <app-css></app-css>
-  <p>Hola mundo desde app.component </p>
-
-  <app-clases></app-clases>
-  <br><br>
-  <p [appResaltado]="orange">Hola mundo</p>
-
-  <app-ng-switch></app-ng-switch>
 </div>
