--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
+<app-navbar></app-navbar>
 <div class="div m-5">
   <h1>Demos <small>angular</small></h1>
   <hr>
-
   <router-outlet></router-outlet>
-
 </div>
