enrutamiento, rutas hijas y padres

--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-md-12 text-left">
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-secondary" [routerLink]="['nuevo']" routerLinkActive="active">Nuevo</button>
+      <button type="button" class="btn btn-secondary" [routerLink]="['nuevo','lo que sea']"
+        routerLinkActive="active">Nuevo</button>
       <button type="button" class="btn btn-secondary" [routerLink]="['editar']"
         routerLinkActive="active">Editar</button>
       <button type="button" class="btn btn-secondary" [routerLink]="['detalle']"
